--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -18,6 +18,6 @@
 								%span.glyphicon.glyphicon-heart
 								= @pin.get_upvotes.size
 							- if user_signed_in?
-								- if (current_user.email == @pin.user.email) || (current_user.email == 'admin@admin.com')
+								- if ((current_user.email == @pin.user.email) || (current_user.email == 'admin@admin.com'))
 									= link_to "Edit", edit_pin_path, class: "btn btn-default"
 									= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
